week03/HW/style.css
body{
  font-family: 'Arial';
  background-color:green;
  color:brown;
  font-size: 16px;
  padding:0px;
  margin:0px;
}

h1{
  margin: -10px -20px 50px -20px;
  padding:0.05em 0.4em;
  color:purple;
  background-image: url(images/pan.png);
  background-color: red;
  background-repeat: repeat;
  background-position: center;
  background-size: contain;
  font-size: 64px;
}

h2 {
  border-top: 1px solid #ccc;
  padding-top:5px;
  color:#000066;
}

h3 {
  color:#000066;
}

h4{
  color:#000066;
}

table {
   width: 200px;
   border:1px solid #666;
   border-collapse:collapse;
   display:inline-block;
}

.imageTable {
  display:inline-block;
  margin-right:20px;

}

.toastTable{
  width:345px;
}

.inliner {
  margin-left:15px;
  padding-right:20px;
}

th, td {
  text-align: left;
  padding:4px;
  border:1px solid #666;
}

hr{
  width:100%;
}

img{
  text-align: center;
  outline:10px solid #ABC;
  border: 2px solid #000;
}

/*buttons*/
.toolbar {
  text-align: left;
  list-style: none;
  margin-top:-50px;
  padding-top:5px;
  width:960px;
  height:50px;
}

ul{
  list-style: none;
}

li {
  text-align: center;
  margin: 5px 5px 15px 0px;
  font-size: 15px;
  display: inline-block; /*inline blocks keeps on to his margin*/
}

li a {
  padding:5px;
  border:1px solid grey;
  border-radius: 10px;
  background-color: white;
  text-decoration: none;
  color:red;
}

li a:hover {
  padding:5px;
  border:3px solid grey;
  border-radius: 25px;
  background-color: black;
  text-decoration: none;
  color:#fff;
}

/*accordion*/
.accordion {
  padding:0px;
}

.accordion div{
  padding:0px;
  display: none;
}

.accordion:hover div {
  display: block;
}

/*custom*/

.strongTxt {
  font-size:1.2em;
  font-weight: bold;
}

.main, h1 div {
    margin: auto;
    width:960px;
}

.main {
  background-color:#e0be6a;
  padding:10px 20px;
}

.headerImg{
  padding:10px;
  margin:10px;
  outline:10px solid #ABC;
  border: 2px solid #000;
}

